@@ -1,5 +1,9 @@
 yoshimi 1.7.0 M
 
+2020-1-31 Will
+* Changed .bankdir references in Bank( to validBank label.
+* Added 1st version .bankdir file to all default banks.
+
 2020-1-30 Will
 * Added std::list for directories in file manager.
   This will mostly be used by Bank(
